--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -19,7 +19,7 @@
 
         <ImageView android:id="@+id/ivImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="100dp"/>
 
         <EditText android:id="@+id/etAnswerField"
             android:layout_width="match_parent"
