--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <FrameLayout android:id="@+id/fragmentExerciseContainer"
+    <FrameLayout android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
