--- a/app/src/main/res/layout/fragment_subjects_list_item.xml
+++ b/app/src/main/res/layout/fragment_subjects_list_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="15dp">
+    android:layout_height="wrap_content">
 
     <ImageView android:id="@+id/ivSubjectIcon"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_launcher_background"/>
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"/>
 
     <TextView android:id="@+id/tvSubjectName"
         android:layout_width="match_parent"
