--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,9 @@
     <style name="subjectNameStyle">
         <item name="android:layout_gravity">bottom</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
 </resources>
