--- a/app/src/main/res/layout/fragment_subjects_list_item.xml
+++ b/app/src/main/res/layout/fragment_subjects_list_item.xml
@@ -5,13 +5,7 @@
 
     <ImageView android:id="@+id/ivSubjectIcon"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"/>
-
-    <TextView android:id="@+id/tvSubjectName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/subjectNameStyle"
-        android:text="Mathematics"/>
 </FrameLayout>
