--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -11,7 +11,7 @@
     <style name="subjectNameStyle">
         <item name="android:layout_gravity">bottom</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">19sp</item>
+
         <item name="android:textColor">@android:color/white</item>
         <item name="android:layout_marginBottom">10dp</item>
     </style>
