--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -2,4 +2,9 @@
 <resources>
     <dimen name="subjectIconOuterPadding">18dp</dimen>
     <dimen name="subjectIconInnerPadding">9dp</dimen>
+
+    <dimen name="subjectMenuButtonBorderRadius">33dp</dimen>
+
+    <dimen name="button_pressed_z_material">16dp</dimen>
+    <dimen name="button_elevation_material">0dp</dimen>
 </resources>
