--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -16,4 +16,16 @@
         <item name="android:layout_marginBottom">10dp</item>
     </style>
 
+    <style name="subjectMenuButton">
+        <item name="android:background">@drawable/subject_menu_button</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_marginTop">18dp</item>
+        <item name="android:stateListAnimator">@animator/button_state_list_anim_material</item>
+        <item name="android:textColorHint">@android:color/black</item>
+        <item name="android:textSize">23sp</item>
+    </style>
+
+    <style name="custom_action_bar">
+        <item name="android:elevation">10dp</item>
+    </style>
 </resources>
