--- a/app/src/main/res/layout/fragment_exercises_list_item.xml
+++ b/app/src/main/res/layout/fragment_exercises_list_item.xml
@@ -6,15 +6,25 @@
 
     <TextView android:id="@+id/tvId"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"/>
 
     <TextView android:id="@+id/tvDescription"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:textColor="@android:color/black"
+        android:textSize="19sp"/>
 
     <ImageView android:id="@+id/ivImage"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="7dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"/>
 
     <EditText android:id="@+id/etAnswerField"
         android:layout_width="match_parent"
