--- a/app/src/main/res/layout/fragment_topics_list_item.xml
+++ b/app/src/main/res/layout/fragment_topics_list_item.xml
@@ -3,11 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/tvTopicNumber"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <TextView android:id="@+id/tvTopicTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="57dp"
+        android:textColor="@android:color/black"
+        android:textSize="19sp"
+        android:gravity="center_vertical"
+        android:drawableEnd="@drawable/ic_arrow_point_to_right"
+        android:paddingStart="18dp"
+        android:paddingEnd="18dp"
+        android:text="Some text"/>
 </LinearLayout>
