--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="?android:attr/actionBarSize">
 
     <TextView android:id = "@+id/toolbarTitle"
         style = "@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
@@ -16,6 +16,7 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:drawableEnd="@drawable/ic_user_icon"
         android:background="@android:color/transparent"/>
 </RelativeLayout>
