--- a/app/src/main/res/layout/fragment_subject_menu.xml
+++ b/app/src/main/res/layout/fragment_subject_menu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="18dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,6 +40,4 @@
             android:gravity="center_vertical"
             android:hint="Список вариантов"/>
     </LinearLayout>
-
-    <include layout="@layout/layout_bottom_sheet"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
