--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -4,15 +4,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="360dp"
-    android:background="@drawable/layout_rounded_corners"
-    android:translationZ="30dp"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-    app:behavior_peekHeight="360dp"
-    app:behavior_hideable="true"
-    app:behavior_skipCollapsed="true">
+    android:layout_height="wrap_content">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="25dp" android:paddingEnd="25dp"
+        android:paddingTop="40dp" android:paddingBottom="40dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="@android:color/black"
+            android:text="Вход"/>
+
+        <EditText android:id="@+id/etLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
+            style="@style/bottomSheetEditText"
+            android:inputType="text"
+            android:hint="Логин"/>
+
+        <EditText android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/bottomSheetEditText"
+            android:inputType="textPassword"
+            android:hint="Пароль"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                style="@style/bottomSheetSmallText"
+                android:text="Забыли пароль?"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                style="@style/bottomSheetSmallText"
+                android:text="Регистрация"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <Button android:id="@+id/btnLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp" android:layout_marginEnd="7dp"
+        android:background="@drawable/subject_menu_button"
+        android:textColorHint="@android:color/black"
+        android:textSize="24sp"
+        android:hint="Войти"/>
 </LinearLayout>
