--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -7,4 +7,6 @@
 
     <dimen name="button_pressed_z_material">16dp</dimen>
     <dimen name="button_elevation_material">0dp</dimen>
+
+    <dimen name="bottomSheetExpandOffset">760dp</dimen>
 </resources>
