Реализован функционал обновления локальной БД при изменении БД на сервере

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#8E78FF</color>
     <color name="colorPrimaryDark">#7462CE</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="glidePlaceholderColor">#EFEFEF</color>
 </resources>
