--- a/app/src/main/res/layout/fragment_subject_menu.xml
+++ b/app/src/main/res/layout/fragment_subject_menu.xml
@@ -29,7 +29,7 @@
             android:paddingStart="50dp"
             android:hint="Решить вариант"/>
 
-        <Button android:id="@+id/btnVariantsList"
+        <Button android:id="@+id/btnTopicsList"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:maxWidth="500dp"
