--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -63,4 +63,9 @@
         android:textColorHint="@android:color/black"
         android:textSize="24sp"
         android:hint="Войти"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:visibility="invisible"/>
 </LinearLayout>
