--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -8,5 +8,8 @@
     <dimen name="button_pressed_z_material">16dp</dimen>
     <dimen name="button_elevation_material">0dp</dimen>
 
-    <dimen name="bottomSheetExpandOffset">760dp</dimen>
+    <dimen name="bottomSheetExpandOffset">960dp</dimen>
+
+    <dimen name="textContentSize">10sp</dimen>
+    <dimen name="textContentMarginTop">7dp</dimen>
 </resources>
