--- a/app/src/main/res/layout/fragment_exercises_list_item.xml
+++ b/app/src/main/res/layout/fragment_exercises_list_item.xml
@@ -29,6 +29,8 @@
     <EditText android:id="@+id/etAnswerField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
+        android:imeOptions="actionDone"
         android:hint="Введите ответ"/>
 
     <TextView android:id="@+id/tvRightAnswer"
