--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -10,4 +10,9 @@
         android:textSize="24sp"
         android:textColor="@android:color/black"
         android:text="Вы авторизованы"/>
+
+    <Button android:id="@+id/btnLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"/>
 </LinearLayout>
