--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+<LinearLayout android:id="@+id/bottomSheetSignIn"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
+    <LinearLayout android:id="@+id/bottomSheetWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="@android:color/black"
-        android:text="Вы авторизованы"/>
+        android:orientation="vertical"
+        android:paddingStart="25dp" android:paddingEnd="25dp"
+        android:paddingTop="40dp" android:paddingBottom="40dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="@android:color/black"
+            android:text="Профиль"/>
+
+        <TextView android:id="@+id/tvTopicTitle"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:textColor="@android:color/black"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:drawableEnd="@drawable/ic_arrow_point_to_right"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:text="Some text"/>
+
+    </LinearLayout>
 
     <Button android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"/>
+        android:layout_marginStart="7dp" android:layout_marginEnd="7dp"
+        android:background="@drawable/logout_button"
+        android:textColorHint="@android:color/black"
+        android:textSize="24sp"
+        android:hint="Выйти"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:visibility="invisible"/>
 </LinearLayout>
