--- a/app/src/main/res/layout/fragment_exercises_list_item.xml
+++ b/app/src/main/res/layout/fragment_exercises_list_item.xml
@@ -4,12 +4,37 @@
     android:layout_height="wrap_content"
     android:padding="15dp">
 
-    <TextView android:id="@+id/tvId"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"/>
+        android:orientation="horizontal">
+
+        <ImageView android:id="@+id/btnAddToCompleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingEnd="12dp"
+            android:src="@drawable/ic_uncompleted"/>
+
+        <TextView
+            android:id="@+id/tvId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:paddingStart="45dp"
+            android:text="awdwad"
+            android:textColor="@android:color/black"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
+        <ImageView android:id="@+id/btnAddToFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_unstar"/>
+    </RelativeLayout>
 
     <TextView android:id="@+id/tvDescription"
         android:layout_width="match_parent"
@@ -19,7 +44,7 @@
         android:textSize="19sp"/>
 
     <ImageView android:id="@+id/ivImage"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
