--- a/app/src/main/res/layout/fragment_exercises_list_item.xml
+++ b/app/src/main/res/layout/fragment_exercises_list_item.xml
@@ -54,11 +54,41 @@
     <EditText android:id="@+id/etAnswerField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:layout_marginTop="10dp"
+        android:inputType="textPassword"
         android:imeOptions="actionDone"
+        android:textSize="25sp"
         android:hint="Введите ответ"/>
 
-    <TextView android:id="@+id/tvRightAnswer"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
+        <Button android:id="@+id/btnShowAnswer"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:layout_height="45dp"
+            android:layout_marginEnd="5dp"
+            style="@style/exerciseAnswerSectionButton"
+            android:hint="Показать ответ"/>
+
+        <Button android:id="@+id/btnAnswer"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:layout_height="45dp"
+            android:layout_marginStart="5dp"
+            style="@style/exerciseAnswerSectionButton"
+            android:hint="Ответить"/>
+    </LinearLayout>
+
+    <TextView android:id="@+id/tvAnswerMessage"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/exercise_answer_section_message"
+        style="@style/exerciseAnswerSectionButton"
+        android:hint="Верно"/>
 </LinearLayout>
