--- a/app/src/main/res/layout/fragment_exercises_list_item.xml
+++ b/app/src/main/res/layout/fragment_exercises_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/llExercise"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp">
@@ -41,7 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:textColor="@android:color/black"
-        android:textSize="19sp"/>
+        android:textSize="19sp"
+        android:lineSpacingExtra="6sp"/>
 
     <ImageView android:id="@+id/ivImage"
         android:layout_width="match_parent"
@@ -50,45 +52,4 @@
         android:layout_marginTop="7dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"/>
-
-    <EditText android:id="@+id/etAnswerField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:inputType="textPassword"
-        android:imeOptions="actionDone"
-        android:textSize="25sp"
-        android:hint="Введите ответ"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100">
-
-        <Button android:id="@+id/btnShowAnswer"
-            android:layout_width="0dp"
-            android:layout_weight="50"
-            android:layout_height="45dp"
-            android:layout_marginEnd="5dp"
-            style="@style/exerciseAnswerSectionButton"
-            android:hint="Показать ответ"/>
-
-        <Button android:id="@+id/btnAnswer"
-            android:layout_width="0dp"
-            android:layout_weight="50"
-            android:layout_height="45dp"
-            android:layout_marginStart="5dp"
-            style="@style/exerciseAnswerSectionButton"
-            android:hint="Ответить"/>
-    </LinearLayout>
-
-    <TextView android:id="@+id/tvAnswerMessage"
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/exercise_answer_section_message"
-        style="@style/exerciseAnswerSectionButton"
-        android:hint="Верно"/>
 </LinearLayout>
