--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,13 @@
     <style name="bottomSheetSmallText">
         <item name="android:textSize">15sp</item>
     </style>
+
+    <style name="variantResultsTableCell">
+        <item name="android:background">#f2f2f2</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:maxWidth">150dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
