--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,4 +52,16 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+
+    <style name="requestListItemTextViewStyle">
+        <item name="android:textSize">19sp</item>
+    </style>
+
+    <style name="requestListItemTitleTextViewStyle" parent="@style/requestListItemTextViewStyle">
+        <item name="android:textColor">#949494</item>
+    </style>
+
+    <style name="requestListItemDescTextViewStyle" parent="@style/requestListItemTextViewStyle">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
