--- a/app/src/main/res/layout/fragment_exercises_list.xml
+++ b/app/src/main/res/layout/fragment_exercises_list.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        layout="@layout/no_content_stub">
+    </include>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExercisesList"
         android:layout_width="match_parent"
