--- a/app/src/main/res/layout/fragment_topics_list.xml
+++ b/app/src/main/res/layout/fragment_topics_list.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        layout="@layout/no_content_stub">
+    </include>
+
     <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvTopicsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
