--- a/app/src/main/res/layout/request_form.xml
+++ b/app/src/main/res/layout/request_form.xml
@@ -18,7 +18,7 @@
 
     <LinearLayout android:id="@+id/llCanCreateRequest"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView android:id="@+id/tvInstruction1"
@@ -40,12 +40,13 @@
 
         <TextView android:id="@+id/tvFilesPicked"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:paddingTop="8dp"
             android:paddingBottom="20dp"
             android:textSize="16sp"
             android:textColor="@android:color/darker_gray"
+            android:visibility="gone"
             android:text="Выбрано файлов: 3"/>
 
         <EditText android:id="@+id/etText"
@@ -75,7 +76,7 @@
 
     <LinearLayout android:id="@+id/llCantCreateRequest"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView android:id="@+id/tvPurchaseInstruction"
