Adding lost files.

--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -12,4 +12,6 @@
 
     <dimen name="textContentSize">10sp</dimen>
     <dimen name="textContentMarginTop">7dp</dimen>
+
+    <dimen name="shopItemRootContainerHeight">192dp</dimen>
 </resources>
