--- a/app/src/main/res/layout/shop_fragment_layout.xml
+++ b/app/src/main/res/layout/shop_fragment_layout.xml
@@ -14,50 +14,21 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView android:id="@+id/tvTitle"
+        <TextView android:id="@+id/tvShopTitle"
             android:layout_width="match_parent"
-            android:layout_height="150px"
-            android:gravity="center_horizontal"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
-            android:text="Магазин"/>
-
-        <LinearLayout
-            android:orientation="horizontal" android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="100">
-
-            <TextView android:id="@+id/tvCountOfChecksCol"
-                android:layout_weight="25"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                style="@style/variantResultsTableCell"
-                android:background="#C4C4C4"
-                android:text="Проверок"/>
-
-            <TextView android:id="@+id/tvPriceCol"
-                android:layout_weight="17"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                style="@style/variantResultsTableCell"
-                android:background="#C4C4C4"
-                android:text="Цена, ₽"/>
-
-            <TextView android:id="@+id/tvDisablesAdsCol"
-                android:layout_weight="29"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                style="@style/variantResultsTableCell"
-                android:background="#C4C4C4"
-                android:textSize="12sp"
-                android:text="Без рекламы"/>
-        </LinearLayout>
+            android:gravity="center_horizontal"
+            android:textColor="#212121"
+            android:paddingBottom="10dp"
+            style="@style/shopItemTitleStyle"
+            android:text="Магазин"/>
     </LinearLayout>
 
     <Button android:id="@+id/btnCloseShop"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="30dp"
+        android:visibility="invisible"
         style="@style/exerciseAnswerSectionButton"
         android:background="@drawable/subject_menu_button"
         android:hint="Закрыть"/>
