Added pop to root fragment on toolbar title tap. Changed text on some buttons.

--- a/app/src/main/res/layout/request_form.xml
+++ b/app/src/main/res/layout/request_form.xml
@@ -71,7 +71,7 @@
             android:layout_height="45dp"
             style="@style/exerciseAnswerSectionButton"
             android:background="@drawable/subject_menu_button"
-            android:hint="Отправить на проверку"/>
+            android:hint="Отправить сочинение"/>
     </LinearLayout>
 
     <LinearLayout android:id="@+id/llCantCreateRequest"
