--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -17,7 +17,8 @@
         android:layout_width = "wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_height = "wrap_content"
+        android:gravity="center_vertical"
+        android:layout_height = "match_parent"
         android:text="@string/app_name"/>
 
     <Button android:id="@+id/btnProfile"
