--- a/app/src/main/res/layout-sw600dp/fragment_subjects_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_subjects_list.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvSubjectsList"
+        android:scrollbars="vertical"
         android:layout_width="450dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
