--- a/app/src/main/res/layout/requests_list_fragment_layout.xml
+++ b/app/src/main/res/layout/requests_list_fragment_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvRequestsList"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager = "LinearLayoutManager">
