--- a/app/src/main/res/layout/fragment_subjects_list.xml
+++ b/app/src/main/res/layout/fragment_subjects_list.xml
@@ -9,4 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <Button android:id="@+id/btnSubjectListGuide"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:maxWidth="500dp"
+        android:layout_marginBottom="10dp"
+        style="@style/subjectMenuButton"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:hint="Гайд по использованию" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
