--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,4 +83,10 @@
         <item name="android:textSize" >18sp</item>
     </style>
 
+    <style name="headerStyle">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#434343</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
